--- a/ansible/inventories/production/group_vars/all.yml
+++ b/ansible/inventories/production/group_vars/all.yml
@@ -5,3 +5,6 @@ node2_ip: <ip> # public IP address of node2
 node3_ip: <ip> # public IP address of node3
 
 cluster_dns: <DNS of server node>
+
+image: <image>
+version: <version
