Add jenkins pipelines

--- a/ansible/roles/k3s_deploy/tasks/main.yml
+++ b/ansible/roles/k3s_deploy/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Export kubeconfig
-  ansible.builtin.shell: export KUBECONFIG=./kubeconfig
+  ansible.builtin.shell: export KUBECONFIG=~/kubeconfig
 
 - name: Copy deployment template
   template:
